--- a/navipage/src/index.css
+++ b/navipage/src/index.css
@@ -1,6 +1,8 @@
 /* @import "tailwindcss/base"; */
 /* @import "tailwindcss/utilities"; */
 /* @import "tailwindcss/components"; */
+@import "@radix-ui/themes/styles.css";
+@import "tailwindcss";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
