--- a/navipage/src/App.css
+++ b/navipage/src/App.css
@@ -4,15 +4,18 @@
 
 #root {
   /* max-width: 1280px; */
-  margin: 0 auto;
-  padding: 0 auto;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
+
+  /* height: 100vh; */
+  /* width: 100vw; */
+  overflow: hidden;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
